updated README.md file

--- a/package.json
+++ b/package.json
@@ -2,28 +2,29 @@
   "name": "booksearch-engine",
   "version": "1.0.0",
   "description": "## Your Task",
-  "main": "index.js",
-  "dependencies": {
-    "apollo-server-express": "^2.15.0",
-    "bcrypt": "^5.0.1",
-    "express": "^4.17.1",
-    "graphql": "^16.0.1",
-    "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.0.13",
-    "nodemon": "^2.0.15"
-  },
-  "devDependencies": {},
+  "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "cd server && npm start",
+    "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "heroku-postbuild": "cd client && npm run build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jessicaga9410/BookSearch-Engine.git"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jessicaga9410/BookSearch-Engine/issues"
+  "dependencies": {
+    "apollo-server-express": "^2.19.1",
+    "graphql": "^16.1.0",
+    "if-env": "^1.0.4"
   },
-  "homepage": "https://github.com/jessicaga9410/BookSearch-Engine#readme"
+  "devDependencies": {
+    "concurrently": "^5.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  }
 }
