--- a/server/package.json
+++ b/server/package.json
@@ -10,13 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "bcrypt": "^5.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
-  },
-  "description": ""
+    "nodemon": "^2.0.3",
+    "description": ""
+  }
 }
